--- a/dht-pub/README.asciidoc
+++ b/dht-pub/README.asciidoc
@@ -24,11 +24,11 @@ copy the files:
 also add `mycredentials.py` with following content:
 
 ----
-MYAPSSID = "your AP SSID"
-MYAPPASS = "your AP password"
+MYAPSSID = "<your AP SSID>"
+MYAPPASS = "<your AP password>"
 ----
 
-#### variables/constants to edit
+#### parameters to edit
 
 * `boot.py`: `STAADDR` `STAMASK` `STAGW` `STADNS`
 * `dht_pub.py`: `SERVER`
@@ -42,7 +42,7 @@ MYAPPASS = "your AP password"
 
 #### Python and Paho MQTT
 * install python (tested with Python3)
-* install Paho MQTT client with broker address; TODO: add notes
+* install Paho MQTT client; TODO: add notes
 
 #### Python scripts
 copy the files:
@@ -50,6 +50,13 @@ copy the files:
 * `bat_print.py`
 * `dht_print.py`
 * `sta_print.py`
+
+#### parameter to edit
+in each of the scripts, edit the *broker address* (near the end of the scripts):
+
+----
+client.connect('<hostname or 111.222.333.444>', 1883, 60)  # Connect to MQTT broker
+----
 
 ## usage
 
@@ -65,7 +72,7 @@ python
 
 >>> import dht_print # or bat_print or sta_print
 ----
-* example: REPL in upper half; 3 MQTT clients in lower half
+* example with `tmux`: ESP32 REPL in upper half; 3 MQTT clients in lower half
 
 image:Screenshot_20180320_201506.png[]
 
