--- a/dht-pub/README.asciidoc
+++ b/dht-pub/README.asciidoc
@@ -1,6 +1,6 @@
 # Publish DHT
 
-* this set of scripts will publish DHT22 temperature and humidity measurements on subscribed MQTT clients, as long as battery or 5VDC measurement and status messages
+* this set of scripts will publish DHT22 temperature and humidity measurements to subscribed MQTT clients, as long as battery or 5VDC measurement, and status messages
 * this page describes a short HOWTO to set up the scripts
 * more notes can be found on the Wiki -- TODO: wiki page for HW set up (DHT and ADC)
 
