--- a/dht-pub/README.asciidoc
+++ b/dht-pub/README.asciidoc
@@ -2,7 +2,11 @@
 
 * this set of scripts will publish DHT22 temperature and humidity measurements to subscribed MQTT clients, as long as battery or 5VDC measurement, and status messages
 * this page describes a short HOWTO to set up the scripts
-* more notes can be found on the Wiki -- TODO: wiki page for HW set up (DHT and ADC)
+* more notes can be found on the Wiki:
+** link:https://github.com/gangely/espp/wiki/Hardware-Setup[Hardware Setup for the DHT22 and the ADC input]
+** MicroPython MQTT libraries
+** Mosquitto
+** Paho MQTT Python
 
 ## software installation 
 
