--- a/dht-pub/README.asciidoc
+++ b/dht-pub/README.asciidoc
@@ -3,6 +3,7 @@
 
 ## info
 * this set of scripts will publish DHT22 temperature and humidity measurements to subscribed MQTT clients, as long as battery or 5VDC measurement, and status messages
+* the MQTT topics are: `esp32/battery`, `esp32/dht`, `esp32/status`
 * this page describes a short HOWTO to set up and run the scripts
 * more notes can be found on the Wiki:
 ** link:https://github.com/gangely/espp/wiki/Hardware-Setup[Hardware Setup for the DHT22 and the ADC input]
