--- a/README.asciidoc
+++ b/README.asciidoc
@@ -25,3 +25,6 @@ using ESP32 with MicroPython
 
 ### link:led-dht-ds[led-dht-ds]
 * subproject: same with deepsleep
+
+### link:mqtt[mqtt]
+* copy of the MicroPython mqtt libraries: `mqtt.robust` and  `mqtt.simple`
