--- a/dht-pub/README.asciidoc
+++ b/dht-pub/README.asciidoc
@@ -12,7 +12,7 @@
 ** link:https://github.com/gangely/espp/wiki/Paho-MQTT[Paho MQTT Python]
 
 ## software installation 
-NOTE: 20180419 notes common to all subprojects will be moved to link:https://github.com/gangely/espp/wiki/Common-MQTT-installation[Common MQTT installation] page
+NOTE: 20180419 notes common to all subprojects will be moved to link:https://github.com/gangely/espp/wiki/MQTT-common-installation[MQTT common installation] page
 
 ### on the ESP32
 prerequisite: have MicroPython installed and accessed through REPL
@@ -45,7 +45,7 @@ copy the files:
 #### Mosquitto
 * follow the wiki page: link:https://github.com/gangely/espp/wiki/Mosquitto[install and start Mosquitto]
 
-### on the client machine
+### on the workstation
 
 #### Python and Paho MQTT
 * prerequisite: have Python 2.7.9+ or Python 3.4+ installed
