--- a/led-dht-ds/README.asciidoc
+++ b/led-dht-ds/README.asciidoc
@@ -5,6 +5,7 @@ history:
 * 20180411 created a distinct script for deepsleep testing
 * 20180411 more test with deepsleep; client.disconnect() solves the client.connect() problem; working on check_msg()
 * 20180412 determined when a message is accepted
+* 20180423 added persistence to mosquitto and retain to paho
 
 ## problem with deepsleep
 
