logging on a server

--- a/dht-pub/README.asciidoc
+++ b/dht-pub/README.asciidoc
@@ -38,7 +38,7 @@ copy the files:
 * `mycredentials.py`: `MYAPSSID` `MYAPPASS`
 * `dht_pub.py`: `BROKER`
 
-=== on the workstation(s)
+=== on workstation and/or server
 
 ==== Python scripts
 copy the files:
@@ -70,8 +70,15 @@ python
 * example with `tmux`: ESP32 REPL in upper half; 3 MQTT clients in lower half +
 image:Screenshot_20180320_201506.png[]
 
+=== on a server or a 24/7 machine
+
 ==== logging to files
 * use the `bat/dht/sta_log.py` to print in terminal _and_ log the messages to daily log files `espbat-YYYYMMDD.log`, `espdht-YYYYMMDD.log` and `espsta-YYYYMMDD.log`
+* the logging scripts should be run on a 24/7 machine, a.e. a server (the broker will be fine); if the machine is headless, start the script in ssh
+* tip: a multi terminal tool such as `tmux` will use a single ssh link to operate, and will allow to easily detach/reattach all the terminals at once
+* MQTT by itself, and these scripts are very resilient:
+ . they can be left running in background, even if the ESP32 is disconnected
+ . logging to the files will be resumed when the ESP32 is reconnected; new files will be started if the date has changed
 
 
 
